# FairDataPipepline

./: .gitignore  1_registry_cli_install.ipynb  Untitled.ipynb  config.yaml  fairwalkthrough.md  imgAnalysis.spec  index.html  modified_config.yaml  nohup.out  run_metadata.yaml  single_frame_shape_analysis.csv
.fair/: cli-config.yaml  staging
.ipynb_checkpoints/: 1_registry_cli_install-checkpoint.ipynb  2a_python-checkpoint.ipynb  config-checkpoint.yaml
Image_and_Script/: imgAnalysis.py  pull  simple_analysis.html  simple_analysis.ipynb  simple_analysis.py  simple_analysis_no_pipe.py  single_frame_shape_analysis.csv
Image_and_Script/.ipynb_checkpoints/: simple_analysis-checkpoint.ipynb
Image_and_Script/Jupyter/: config.yaml  simple_analysis.html  simple_analysis.ipynb
Image_and_Script/Jupyter/.ipynb_checkpoints/: simple_analysis-checkpoint.ipynb
Image_and_Script/Jupyter_testing/: config.yaml
Image_and_Script/Jupyter_testing/.ipynb_checkpoints/: config-checkpoint.yaml  simple_analysis-checkpoint.ipynb
Image_and_Script/image/: pyproject.toml
Image_and_Script/image/image/: config.yaml  imgAnalysis.py  main.py  test.py
Image_and_Script/image/image/mask/: single_frame_image_shape_analysis.csv
Image_and_Script/python/: .config.yaml.swp  config.yaml  simple_analysis.py
old_trial/: .simple_analysis.ipynb.swp  simple_analysis.html  single_frame_shape_analysis.csv
