[tool.poetry]
name = "image"
version = "0.1.0"
description = ""
authors = ["pharmlovex <pharmifedayoojo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-image = "^0.23.2"
tifffile = "^2024.5.22"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
